chore: production deployment config (Render + Vercel + Railway)
- Dockerfile: multi-stage build (Maven build + slim JRE runtime, ~180MB vs 700MB)
- SecurityConfig: CORS now allows *.vercel.app and *.onrender.com wildcard patterns
- backend/railway.json: Railway deployment config
- frontend/vercel.json: SPA routing rewrite (fixes React Router on direct URL access)
- vite.config.js: explicit build output dir + code splitting for faster loads